@@ -674,7 +674,15 @@ java -Xmx6000M -XX:MaxPermSize=256M -Djava.library.path=linux_x86_64/ -cp lbGUI.
 				<echo file="${pkg-gui}/OSX-lbVSGUI.command">
 		java -Xmx1000M -XX:MaxPermSize=256M -Djava.library.path=OSX/ -XstartOnFirstThread -cp lbGUI.jar;OSX/swt.jar;../runtime/lbPatch.jar;../runtime/lbRuntime.jar org.LexGrid.LexBIG.gui.LB_VSD_GUI
 				</echo>
-				<echo file="${pkg-gui}/Linux_64-lbVSGUI.sh">
+		<echo file="${pkg-gui}/Windows_64-lbVSGUI.bat">
+java -Xmx1000M -XX:MaxPermSize=256M -cp lbGUI.jar;windows_64/swt.jar;../runtime/lbPatch.jar;../runtime/lbRuntime.jar org.LexGrid.LexBIG.gui.LB_VSD_GUI
+pause
+		</echo>
+		<echo file="${pkg-gui}/Windows_64-lbVSGUI-browser.bat">
+java -Xmx1000M -XX:MaxPermSize=256M -cp lbGUI.jar;windows_64/swt.jar;../runtime/lbPatch.jar;../runtime/lbRuntime.jar org.LexGrid.LexBIG.gui.LB_VSD_GUI -d
+pause
+		</echo>
+		<echo file="${pkg-gui}/Linux_64-lbVSGUI.sh">
 		java -Xmx6000M -XX:MaxPermSize=256M -Djava.library.path=linux_x86_64/ -cp lbGUI.jar:linux_x86_64/swt.jar:../runtime/lbPatch.jar:../runtime/lbRuntime.jar org.LexGrid.LexBIG.gui.LB_VSD_GUI
 				</echo>
 				<!--create the start scripts-->
